# altdns

./: .gitignore  Cargo.toml  README.md  altdns.conf.example
src/: config.rs  lib.rs  main.rs
test/: main.py
