[package]
name = "altdns"
version = "0.1.0"
edition = "2021"
authors = ["AnmiTaliDev <annmitali198@gmail.com>"]
description = "A lightweight, microkernel-based DNS resolver alternative to systemd-resolved"
repository = "https://github.com/AnmiTaliDev/altdns"
homepage = "https://github.com/AnmiTaliDev/altdns"
license = "Apache-2.0"
keywords = ["dns", "resolver", "systemd", "networking", "microkernel"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "sync", "signal", "fs", "time"] }
configparser = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
futures = "0.3"
syslog = "6.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "altdns"
path = "src/main.rs"